# DerClou

./: CMakeLists.txt  CMakeUserPresets.json  README.md  build-pc.sh  build-web.sh  conan-emscripten.profile  conan-mac.profile  conanfile.txt  devbox.json
src/: CMakeLists.txt  pre.js
src/base/: base.c
src/disk/: disk.c
src/gameplay/: loadsave.c
src/gfx/: loadimage.c
